images/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring-boot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
