images/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /actuator/health
spec:
  rules:
  - host: *
    http:
      paths:
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: spring-boot-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-service
            port:
              number: 80
